# forensic

./: .gitignore  README.md  ai-audit-report.json  linkedin-post.md  pyproject.toml  report.html
src/git_forensic/: __init__.py  cli.py  detector.py  html_report.py  reporter.py  scorer.py
tests/: test_detector.py  test_scorer.py
